🎉feat: bump to newest version

--- a/template/src/view/components/splash-loader/styles.scss
+++ b/template/src/view/components/splash-loader/styles.scss
@@ -1,7 +1,7 @@
-$count = 7;
-$time = 2s;
-$size = 100px;
-$color = #ffffff;
+$count: 7;
+$time: 2; //in seconds
+$size: 100;
+$color: #ffffff;
 
 .holder {
   position: absolute;
@@ -15,13 +15,13 @@ $color = #ffffff;
 
   .preloader {
     /* size */
-    width: $size;
-    height: $size;
+    width: $size + px;
+    height: $size + px;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translateX(-50%) translateY(-50%);
-    animation: rotatePreloader $time infinite ease-in;
+    animation: rotatePreloader $time + s infinite ease-in;
   }
   @keyframes rotatePreloader {
     0% {
@@ -49,10 +49,10 @@ $color = #ffffff;
     border-radius: 50%;
   }
 
-  for $i in (1..$count) {
+  @for $i from 1 through $count {
     .preloader div:nth-child(#{$i}) {
-      transform: rotateZ(((360 / $count) * ($i - 1))deg);
-      animation: rotateCircle + $i $time infinite linear;
+      transform: rotateZ(((360 / $count) * ($i - 1)) + deg);
+      animation: rotateCircle + $i $time + s infinite linear;
       z-index: $count - $i;
     }
     @keyframes rotateCircle#{$i} {
@@ -61,16 +61,16 @@ $color = #ffffff;
       }
       #{percentage((((50 / $count) + 0.0001) * ($i - 1)) / 100)} {
         opacity: 1;
-        transform: rotateZ((0 - ((360 / $count) * ($i - 2)))deg);
+        transform: rotateZ((0 - ((360 / $count) * ($i - 2))) + deg);
       }
       #{percentage((((50 / $count) * ($i - 0)) + 2) / 100)} {
-        transform: rotateZ((0 - ((360 / $count) * ($i - 1)))deg);
+        transform: rotateZ((0 - ((360 / $count) * ($i - 1))) + deg);
       }
       #{percentage(((50 + ((50 / $count) * ($i - 0))) + 2) / 100)} {
-        transform: rotateZ((0 - ((360 / $count) * ($i - 1)))deg);
+        transform: rotateZ((0 - ((360 / $count) * ($i - 1))) + deg);
       }
       100% {
-        transform: rotateZ((0 - ((360 / $count) * ($count - 1)))deg);
+        transform: rotateZ((0 - ((360 / $count) * ($count - 1))) + deg);
         opacity: 1;
       }
     }
